character, company and person CRUD

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,24 +12,24 @@
           <span>Games</span>
         </button>
         <button mat-menu-item routerLink="/franchises">
-          <mat-icon>voicemail</mat-icon>
+          <mat-icon>group_work</mat-icon>
           <span>Franchises</span>
         </button>
         <button mat-menu-item routerLink="/characters">
-          <mat-icon>notifications_off</mat-icon>
-          <span>Characters</span>
+          <mat-icon>smart_toy</mat-icon>
+          <span>Personajes</span>
         </button>
         <button mat-menu-item routerLink="/companies">
-          <mat-icon>notifications_off</mat-icon>
-          <span>Companies</span>
+          <mat-icon>apartment</mat-icon>
+          <span>Compañías</span>
         </button>
         <button mat-menu-item routerLink="/platforms">
           <mat-icon>voicemail</mat-icon>
           <span>Platforms</span>
         </button>
         <button mat-menu-item routerLink="/people">
-          <mat-icon>dialpad</mat-icon>
-          <span>People</span>
+          <mat-icon>person</mat-icon>
+          <span>Personas</span>
         </button>
         <button mat-menu-item routerLink="/genres">
           <mat-icon>voicemail</mat-icon>
