--- a/src/app/pages/games/game-detail/game-detail.page.html
+++ b/src/app/pages/games/game-detail/game-detail.page.html
@@ -205,4 +205,9 @@
             <button (click)="addAwards()">addAwards</button>
         </div>
     </div>
+    <div class="fav-button-bottom-right">
+        <button mat-fab [style]="backgroundStyle">
+          <mat-icon>menu</mat-icon>
+        </button>
+    </div>
 </div>
