series and franchises CRUD

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
         </button>
         <button mat-menu-item routerLink="/franchises">
           <mat-icon>group_work</mat-icon>
-          <span>Franchises</span>
+          <span>Franquicias</span>
         </button>
         <button mat-menu-item routerLink="/characters">
           <mat-icon>smart_toy</mat-icon>
