--- a/src/app/pages/characters/character-detail/character-detail.page.html
+++ b/src/app/pages/characters/character-detail/character-detail.page.html
@@ -91,7 +91,7 @@
                     <mat-icon>group_work</mat-icon>
                     <span>Eliminar franquicia</span>
                 </button>
-                <button mat-menu-item *ngIf="!!character.franchise_id" (click)="presentAddCreatorsDialog()">
+                <button mat-menu-item (click)="presentAddCreatorsDialog()">
                     <mat-icon>person</mat-icon>
                     <span>Añadir creador</span>
                 </button>
