--- a/src/app/pages/companies/company-detail/company-detail.page.html
+++ b/src/app/pages/companies/company-detail/company-detail.page.html
@@ -52,6 +52,22 @@
                 </div>
             </div>
         </div>
+        <mat-expansion-panel *ngIf="(company.franchises && company.franchises.length) || (company.franchises_created && company.franchises_created.length)">
+            <mat-expansion-panel-header class="divider"[style]="backgroundStyle">
+              <mat-panel-title>
+                Franquicias
+              </mat-panel-title>
+            </mat-expansion-panel-header>
+            <vgdb-items-list *ngIf="company.franchises && company.franchises.length" [itemsList]="company.franchises"
+                        navigateTo="franchises" imgPath="franchises">
+            </vgdb-items-list>
+            <div *ngIf="company.franchises_created && company.franchises_created.length" class="expansion-container">
+                <div class="subtitle">Creadas pero actualmente propiedad de otros:</div>
+                <vgdb-items-list [itemsList]="company.franchises_created"
+                            navigateTo="franchises" imgPath="franchises">
+                </vgdb-items-list>
+            </div>
+        </mat-expansion-panel>
         <mat-expansion-panel *ngIf="company.games && company.games.length">
             <mat-expansion-panel-header class="divider"[style]="backgroundStyle">
               <mat-panel-title>
